Revert "feat(football): add sports organizations CRUD and optional league organization."
This reverts commit 525b35e3e255cb6391504e6c5ba9a456207ccad2.
